--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,12 @@ select, button {
 
 #gridContainer {
   margin: 30px auto;
-  width: 316px;
+  width: 337px;
 }
 
 #grid {
   display: grid;
-  grid-template-columns: repeat(15, 20px);
+  grid-template-columns: repeat(16, 20px);
   gap: 1px;
   background-color: #ccc;
   border: 1px solid #999;
@@ -136,5 +136,11 @@ img.creatureDead{
 }
 
 .creatureForm {
-  width:300px;
+  width: 200px;
+  margin: 5px;
+  
+}
+
+.creatureForm *{ 
+  width: 100%;
 }
